# backend/Documents/API.yaml
@@ -261,6 +261,83 @@ paths:
                 - page
             examples: {}
         description: "parameter \"type\":\n  Specify which type of community to list. \n  The three possible values are:\n    \"all\"      - all communities\n    \"created\"  - communities the user created\n    \"memberof\" - communities the user is a member of\nparameter \"page\":\n  If page is not specified, it is assumed first page.\n  If page is bigger than 'total_pages', last page is returned."
+  '/communities/{id}/posts/{id}/likes':
+    parameters:
+      - schema:
+          type: string
+        name: id
+        in: path
+        required: true
+      - schema:
+          type: string
+        name: id
+        in: path
+        required: true
+    post:
+      summary: ''
+      operationId: post-communities-id-posts-id-likes
+      responses:
+        '200':
+          description: OK - Post liked.
+        '401':
+          description: Unauthorized - Login required / Member not part of community.
+        '404':
+          description: Not Found - Community/Post does not exists.
+        '409':
+          description: Conflict - Post is already liked.
+      description: Like a post in a community.
+    delete:
+      summary: ''
+      operationId: delete-communities-id-posts-id-likes
+      responses:
+        '200':
+          description: OK - Post unliked.
+        '401':
+          description: Unauthorized - Login required.
+        '404':
+          description: Not Found - Community/Post/Like does not exist.
+      description: Unlike a post.
+  '/communities/{id}/posts/{id}/comments/{id}/likes':
+    parameters:
+      - schema:
+          type: string
+        name: id
+        in: path
+        required: true
+      - schema:
+          type: string
+        name: id
+        in: path
+        required: true
+      - schema:
+          type: string
+        name: id
+        in: path
+        required: true
+    post:
+      summary: ''
+      operationId: post-communities-id-posts-id-comments-id
+      responses:
+        '200':
+          description: OK - Comment liked.
+        '401':
+          description: Unauthorized - Login required / User not member of community.
+        '404':
+          description: Not Found - Comment not found.
+        '409':
+          description: Conflict - Comment is already liked.
+      description: Like a comment.
+    delete:
+      summary: ''
+      operationId: delete-communities-id-posts-id-comments-id-likes
+      responses:
+        '200':
+          description: OK - Comment unliked.
+        '401':
+          description: Unauthorized - Permission denied.
+        '404':
+          description: Not Found - Comment/Like does not exist.
+      description: Unlike a comment.
 components:
   schemas:
     Post:
